--- a/.github/workflows/eslint-validation.yml
+++ b/.github/workflows/eslint-validation.yml
@@ -16,5 +16,5 @@ jobs:
           node-version: 20
       
       - name: Install package.json dependecies
-        uses: |
+        run: |
           npm install
