--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2"
+  },
+  "lint-staged": {
+    "{**/*,*}.{js,vue,html,css}": "prettier --write"
+  },
+  "scripts": {
+    "prepare": "husky"
   }
 }
